# cheesecloth-sym-proof

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  build_microram.sh  gen_advice.sh  gen_microram_cargo_toml.py  hardcoded_snapshot_to_rust.py  prog_to_rust.py  term_table_to_rust.py
doc/: advice.md
secret-decls/: Cargo.toml  lib.rs
secrets/: Cargo.toml  lib.rs  main.rs
src/: advice.rs  interp.rs  kernel.rs  lib.rs  logic.rs  macros.rs  micro_ram.rs  proof.rs  symbolic.rs  tactics.rs
src/advice/: map.rs  mod.rs  vec.rs
src/advice/term_table/: mod.rs  playback.rs  playback_microram.rs  recording.rs
src/logic/: eq_shifted.rs  fold.rs  mod.rs  print.rs  rename_vars.rs  shift.rs  subst.rs  term.rs  visit.rs  wf.rs
src/micro_ram/: import.rs  mod.rs  state.rs
traces/: grit.cbor
