[package]
name = "sym-proof"
version = "0.1.0"
authors = ["Stuart Pernsteiner <spernsteiner@galois.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
witness-checker = { path = "../witness-checker", package = "cheesecloth" }

serde = { version = "1", features = ["derive"] }
serde_cbor = "0.10"
serde_json = "1"
serde_yaml = "0.8"

log = "0.4"
env_logger = "0.7"
bumpalo = "3.14.0"

[features]
verbose = []
debug_symbolic = []
microram = []
deny_warnings = []

stage0 = [
    "recording_rules",
    "recording_search_index",
    "recording_terms",
]
stage1 = [
    "playback_rules",
    "playback_search_index",
    "playback_terms",
    "recording_term_table",
    "recording_term_index",
    "recording_avec_len",
    "recording_amap_keys",
]
stage2 = [
    "playback_rules",
    "playback_search_index",
    "playback_term_table",
    "playback_term_index",
    "playback_avec_len",
    "playback_amap_keys",
    "recording_term_intern_index",
    "recording_amap_access",
]
stage3 = [
    "playback_rules",
    "playback_search_index",
    "playback_term_table",
    "playback_term_index",
    "playback_term_intern_index",
    "playback_avec_len",
    "playback_amap_keys",
    "playback_amap_access",
    "recording_linear",
]
stage4 = [
    "playback_rules",
    "playback_search_index",
    "playback_term_table",
    "playback_term_index",
    "playback_term_intern_index",
    "playback_avec_len",
    "playback_amap_keys",
    "playback_amap_access",
    "playback_linear",
]

recording_rules = []
playback_rules = []
recording_terms = []
playback_terms = []
recording_term_table = []
playback_term_table = []
recording_term_index = []
playback_term_index = []
recording_term_intern_index = []
playback_term_intern_index = []
recording_search_index = []
playback_search_index = []
recording_avec_len = []
playback_avec_len = []
recording_amap_keys = []
playback_amap_keys = []
recording_amap_access = []
playback_amap_access = []
recording_linear = []
playback_linear = []

# When adding new advice streams, be sure to update `doc/advice.md`.

[[bin]]
name = "proof_sqrt"
required-features = ["debug_symbolic"]

[profile.dev]
opt-level = 1
debug = 2
