[package]
name = "cheesecloth-sym-proof-secrets"
version = "0.1.0"
authors = ["Stuart Pernsteiner <spernsteiner@galois.com>"]
edition = "2018"

[dependencies]
cheesecloth-sym-proof-secret-decls = { path = "../secret-decls" }

[package.metadata.microram]
deps = ["cheesecloth-sym-proof-secret-decls"]
bins = ["secrets"]

[features]
microram = []

[lib]
path = "lib.rs"

[[bin]]
name = "secrets"
path = "main.rs"
